--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,41 @@
+body {
+    background-color: #f8f9fa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
 
-/* 
+.traffic-light {
+    width: 300px;
+    background-color: black;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.light {
+    width: 180px;
+    height: 180px;
+    background-color: gray;
+    margin: 10px auto;
+    border-radius: 50%;
+    cursor: pointer;
+}
 
-*/
+.light.selected {
+    box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.5);
+}
+
+.light.red {
+    background-color: red;
+}
+
+.light.yellow {
+    background-color: yellow;
+}
+
+.light.green {
+    background-color: green;
+}
